tests/baselines/reference/dontShowCompilerGeneratedMembers.errors.txt
==== tests/cases/compiler/dontShowCompilerGeneratedMembers.ts (3 errors) ====
    var f: {
        ~~~~
        x: number;
    ~~~~~~~~~~~~~~
        <-
         ~
!!! error TS1008: Unexpected token; 'type parameter' expected.
    ~~~~~~
!!! error TS2012: Cannot convert 'number' to '{ x: number; (): any; }':
!!! 	Type 'Number' is missing property 'x' from type '{ x: number; (): any; }'.
    };
    ~
!!! error TS1003: Identifier expected.